tests/ParserTests/Good/Good03.hpr
module A (A, b, C) where
