tests/ParserTests/Bad/Bad03.hpr
module A where
import b
